# airs

./: .cproject  .gitignore  .project  README.md  airs-200629-2.tgz  airs-201112.tgz  airs.tgz  airs.xml  airs1.tgz  airs精度调试测试记录.docx
airs/: .autotools  .cproject  .project  INSTALL  Makefile.in  NEWS  README  configure  configure.ac  configure.ac~  configure.scan  configure~  toDo.rtf  调试记录.pages
airs/autom4te.cache/: output.0  output.1  output.2  output.3  output.5  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
airs/debug/: airs.xml
airs/release/: Makefile  airs.xml  badmark_airs.xml  config.status
airs/release/sex-param/: default.param  default.sex  high.sex  low.sex
airs/release/src/: Makefile  airs
airs/release/src/.deps/: ACatUCAC4.Po  ACatalog.Po  AFindPV.Po  AFindPV.Tpo  AMath.Po  ATimeSpace.Po  AsciiProtocol.Po  AstroDIP.Po  AstroDIP.Tpo  AstroMetry.Po  AstroMetry.Tpo  DBCurl.Po  DoProcess.Po  DoProcess.Tpo  GLog.Po  IOServiceKeep.Po  LogCalibrated.Po  LogCalibrated.Tpo  MessageQueue.Po  PhotoMetry.Po  PhotoMetry.Tpo  WataDataTransfer.Po  airs.Po  airs.Tpo  daemon.Po  tcpasio.Po
airs/src/: ACatUCAC4.cpp  ACatUCAC4.h  ACatalog.cpp  ACatalog.h  ADefine.h  AFindPV.cpp  AFindPV.cpp.new  AFindPV.h  AFindPV.h.new  AMath.cpp  AMath.h  ATimeSpace.cpp  ATimeSpace.h  AsciiProtocol.cpp  AsciiProtocol.h  AsciiProtocolBase.h  AstroDIP.cpp  AstroDIP.h  AstroDeviceDef.h  AstroMetry.cpp  AstroMetry.h  BadPixel.hpp  DBCurl.cpp  DBCurl.h  DoProcess.cpp  DoProcess.h  GLog.h  IOServiceKeep.cpp  IOServiceKeep.h  LogCalibrated.cpp  LogCalibrated.h  Makefile.am  Makefile.in  MatchCatalog.cpp  MatchCatalog.h  MessageQueue.cpp  MessageQueue.h  Parameter.h  PhotoMetry.cpp  PhotoMetry.h  (+13 more)
airs/src/.deps/: AstroDIP.Tpo
airs1/: .autotools  .cproject  .project  01-开发记录.docx  AUTHORS  Makefile.in  NEWS  README  config.h.in  config.h.in~  configure  configure.ac  configure.scan  ~$1-开发记录.docx
airs1/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
airs1/debug/: airs1.xml
airs1/debug/src/.deps/: ATimeSpace.Po  GLog.Po
airs1/release/: Makefile  airs1.xml  config.status
airs1/release/param/: default.sex
airs1/release/src/: Makefile  airs1
airs1/release/src/.deps/: ACatalog.Tpo  ADIProcess.Po  ADIReduct.Po  Parameter.Po  ProjectTNX.Po  airs.Po
airs1/src/: AAstrometryGeneral.cpp  AAstrometryGeneral.h  AAstrometryPrecise.cpp  AAstrometryPrecise.h  ACatTycho2.cpp  ACatTycho2.h  ACatalog.cpp  ACatalog.h  ADIData.h  ADIProcess.cpp  ADIProcess.h  ADIReduct.cpp  ADIReduct.h  ADefine.h  AFindPV.cpp  AFindPV.h  AMatchStar.cpp  AMatchStar.h  AMath.cpp  AMath.h  AStarMatch.cpp  AStarMatch.h  GLog.cpp  GLog.h  Makefile.am  Makefile.in  Parameter.cpp  Parameter.h  ProjectTNX.cpp  ProjectTNX.h  ProjectTNX.hpp  airs.cpp  globaldef.h
release/: Makefile  airs.xml  config.status
release/src/: Makefile  airs
release/src/.deps/: AstroDIP.Po  AstroMetry.Po  DoProcess.Po  GLog.Po  PhotoMetry.Po  airs.Po  daemon.Po
sex-params/: default.param  default.sex
